# Logging-lib-with-app

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
src/: logger.cpp  logger.h  main.cpp  stats_collector.cpp
test/: test_logger.cpp  test_sender.cpp
